# backend

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  justfile
crates/bonfire/: Cargo.toml  Dockerfile
crates/bonfire/src/: config.rs  database.rs  main.rs  websocket.rs
crates/bonfire/src/events/: impl.rs  state.rs
crates/core/config/src/: lib.rs
crates/core/database/: Cargo.toml
crates/core/database/src/: lib.rs
crates/core/database/src/amqp/: amqp.rs
crates/core/database/src/drivers/: mod.rs
crates/core/database/src/events/: client.rs  rabbit.rs
crates/core/database/src/tasks/: ack.rs  process_embeds.rs
crates/core/database/src/util/: bulk_permissions.rs  idempotency.rs  permissions.rs  (+1 more)
crates/core/files/: Cargo.toml
crates/core/files/src/: lib.rs
crates/core/models/: Cargo.toml
crates/core/permissions/: Cargo.toml
crates/core/presence/: Cargo.toml
crates/core/result/: Cargo.toml
crates/core/result/src/: okapi.rs
crates/daemons/crond/: Cargo.toml  Dockerfile
crates/daemons/crond/src/: main.rs
crates/daemons/crond/src/tasks/: file_deletion.rs  prune_dangling_files.rs
crates/daemons/pushd/: Cargo.toml  Dockerfile
crates/daemons/pushd/src/: main.rs
crates/delta/src/: main.rs
crates/delta/src/routes/: mod.rs  root.rs
crates/delta/src/util/: ratelimiter.rs  test.rs
crates/services/autumn/: Cargo.toml
crates/services/autumn/src/: api.rs  clamav.rs  exif.rs  main.rs  metadata.rs
crates/services/january/: Cargo.toml
crates/services/january/src/: api.rs  main.rs  requests.rs  website_embed.rs
(+192 files in other folders)
