[package]
name = "guilderia-crond"
version = "0.8.7"
license = "AGPL-3.0-or-later"
authors = ["Paul Makles <me@insrt.uk>"]
edition = "2021"
description = "Revolt Daemon Service: Timed data clean up tasks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Utility
log = "0.4"

# Async
tokio = { version = "1" }

# Core
guilderia-database = { version = "0.8.7", path = "../../core/database" }
guilderia-result = { version = "0.8.7", path = "../../core/result" }
guilderia-config = { version = "0.8.7", path = "../../core/config" }
guilderia-files = { version = "0.8.7", path = "../../core/files" }
